dto -> 레코드 변경 컨퍼런스,세션 리팩토링