@@ -2,6 +2,7 @@ package goorm.back.zo6.reservation.application.shared;
 
 import goorm.back.zo6.conference.application.dto.ConferenceResponse;
 import goorm.back.zo6.conference.application.dto.SessionDto;
+import goorm.back.zo6.conference.application.shared.ConferenceMapper;
 import goorm.back.zo6.conference.domain.Conference;
 import goorm.back.zo6.conference.domain.Session;
 import goorm.back.zo6.reservation.application.ReservationConferenceDetailResponse;
@@ -18,23 +19,25 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ReservationMapper {
 
-    private static final String S3_BASE_URL = "https://maskpass-bucket.s3.ap-northeast-2.amazonaws.com/";
+    private final ConferenceMapper conferenceMapper;
 
     public List<ReservationResponse> mapAndSortReservations(List<Reservation> reservations) {
         return reservations.stream()
                 .map(this::mapToReservationResponse)
-                .sorted(Comparator.comparing((ReservationResponse res) -> res.getConference().getStartTime()).reversed())
+                .sorted(Comparator.comparing((ReservationResponse res) -> res.conference().startTime()).reversed())
                 .collect(Collectors.toList());
     }
 
     public List<ConferenceResponse> mapToConferenceSimpleResponse(List<Reservation> reservations) {
+
         return reservations.stream()
                 .map(this::createConferenceSimpleResponse)
-                .sorted(Comparator.comparing(ConferenceResponse::getStartTime).reversed())
+                .sorted(Comparator.comparing(ConferenceResponse::startTime).reversed())
                 .collect(Collectors.toList());
     }
 
     public ReservationConferenceDetailResponse mapToDetailResponse(Conference conference, List<SessionDto> reservedSessions) {
+
         return ReservationConferenceDetailResponse.builder()
                 .conferenceId(conference.getId())
                 .conferenceName(conference.getName())
@@ -47,28 +50,25 @@ public class ReservationMapper {
     }
 
     public ReservationResponse mapToReservationResponse(Reservation reservation) {
-        Conference conference = reservation.getConference();
 
         List<ReservationResponse.SessionInfo> sessionInfos = reservation.getReservationSessions().stream()
-                .map(reservationSession -> {
-                    Session session = reservationSession.getSession();
-                    return ReservationResponse.SessionInfo.builder()
-                            .sessionId(session.getId())
-                            .conferenceId(reservation.getConference().getId())
-                            .sessionName(session.getName())
-                            .capacity(session.getCapacity())
-                            .location(session.getLocation())
-                            .startTime(session.getStartTime())
-                            .endTime(session.getEndTime())
-                            .summary(session.getSummary())
-                            .speaker(session.getSpeakerName())
-                            .speakerOrganization(session.getSpeakerOrganization())
-                            .imageUrl(session.getSpeakerImageKey())
-                            .build();
-                })
-                .collect(Collectors.toList());
+                .map(rs -> mapSessionInfo(rs.getSession()))
+                .sorted(Comparator.comparing(ReservationResponse.SessionInfo::startTime))
+                .toList();
 
-        ReservationResponse.ConferenceInfo conferenceInfo = ReservationResponse.ConferenceInfo.builder()
+        return ReservationResponse.builder()
+                .reservationId(reservation.getId())
+                .conference(mapToConferenceInfo(reservation.getConference()))
+                .sessions(sessionInfos)
+                .status(reservation.getStatus())
+                .build();
+    }
+
+    private ReservationResponse.ConferenceInfo mapToConferenceInfo(Conference conference) {
+
+        String imageUrl = conferenceMapper.toConferenceResponse(conference).imageUrl();
+
+        return ReservationResponse.ConferenceInfo.builder()
                 .conferenceId(conference.getId())
                 .conferenceName(conference.getName())
                 .description(conference.getDescription())
@@ -77,20 +77,31 @@ public class ReservationMapper {
                 .endTime(conference.getEndTime())
                 .capacity(conference.getCapacity())
                 .hasSessions(conference.getHasSessions())
-                .imageUrl(S3_BASE_URL + reservation.getConference().getImageKey())
+                .imageUrl(imageUrl)
                 .build();
+    }
 
-        return ReservationResponse.builder()
-                .reservationId(reservation.getId())
-                .conference(conferenceInfo)
-                .sessions(sessionInfos)
-                .status(reservation.getStatus())
+    private ReservationResponse.SessionInfo mapSessionInfo(Session session) {
+
+        String sessionSpeakerUrl = conferenceMapper.toSessionDto(session).speakerImage();
+
+        return ReservationResponse.SessionInfo.builder()
+                .sessionId(session.getId())
+                .conferenceId(session.getConference().getId())
+                .sessionName(session.getName())
+                .capacity(session.getCapacity())
+                .location(session.getLocation())
+                .startTime(session.getStartTime())
+                .endTime(session.getEndTime())
+                .summary(session.getSummary())
+                .speaker(session.getSpeakerName())
+                .speakerOrganization(session.getSpeakerOrganization())
+                .imageUrl(sessionSpeakerUrl)
                 .build();
     }
 
     public ConferenceResponse createConferenceSimpleResponse(Reservation reservation) {
-        return ConferenceResponse.simpleFrom(
-                reservation.getConference(), S3_BASE_URL + reservation.getConference().getImageKey()
-        );
+
+        return conferenceMapper.toConferenceSimpleResponse(reservation.getConference());
     }
 }
